{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 32,
  "lineage": "2dfe9b54-418e-1834-c184-fdcdda1eb74d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "PublicVM_NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8d3ed687-4dc7-4a9b-903a-b9a14bde85c4/resourceGroups/CI_PJOPS_VM_RG/providers/Microsoft.Network/networkInterfaces/HOST01-nic",
            "internal_domain_name_suffix": "3qcdhvvabwcubczeomvi5h5n3c.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8d3ed687-4dc7-4a9b-903a-b9a14bde85c4/resourceGroups/CI_PJOPS_VM_RG/providers/Microsoft.Network/virtualNetworks/PJOPS_PROD_VNET/subnets/Public_Subnet01"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "HOST01-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "CI_PJOPS_VM_RG"
          },
          "dependencies": [
            "azurerm_resource_group.CI_PJOPS_VM_RG",
            "azurerm_subnet.PJOPS_SUBNET_PUB",
            "azurerm_virtual_network.PJOPS_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "PJOPS_SG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8d3ed687-4dc7-4a9b-903a-b9a14bde85c4/resourceGroups/CI_PJOPS_VM_RG/providers/Microsoft.Network/networkSecurityGroups/PJOPS_DEFAULT_SG",
            "location": "centralindia",
            "name": "PJOPS_DEFAULT_SG",
            "resource_group_name": "CI_PJOPS_VM_RG",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.CI_PJOPS_VM_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "PJOPS_SG02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8d3ed687-4dc7-4a9b-903a-b9a14bde85c4/resourceGroups/CI_PJOPS_VM_RG/providers/Microsoft.Network/networkSecurityGroups/PJOPS_SG02",
            "location": "centralindia",
            "name": "PJOPS_SG02",
            "resource_group_name": "CI_PJOPS_VM_RG",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.CI_PJOPS_VM_RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PJOPS_SUBNET_PRVT",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8d3ed687-4dc7-4a9b-903a-b9a14bde85c4/resourceGroups/CI_PJOPS_VM_RG/providers/Microsoft.Network/virtualNetworks/PJOPS_PROD_VNET/subnets/Private_Subnet01",
            "name": "Private_Subnet01",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "CI_PJOPS_VM_RG",
            "virtual_network_name": "PJOPS_PROD_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.CI_PJOPS_VM_RG",
            "azurerm_virtual_network.PJOPS_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PJOPS_SUBNET_PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8d3ed687-4dc7-4a9b-903a-b9a14bde85c4/resourceGroups/CI_PJOPS_VM_RG/providers/Microsoft.Network/virtualNetworks/PJOPS_PROD_VNET/subnets/Public_Subnet01",
            "name": "Public_Subnet01",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "CI_PJOPS_VM_RG",
            "virtual_network_name": "PJOPS_PROD_VNET"
          },
          "dependencies": [
            "azurerm_resource_group.CI_PJOPS_VM_RG",
            "azurerm_virtual_network.PJOPS_Vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "PJOPS_Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d63304ec-0da0-4085-8b24-732a8f9fedea",
            "id": "/subscriptions/8d3ed687-4dc7-4a9b-903a-b9a14bde85c4/resourceGroups/CI_PJOPS_VM_RG/providers/Microsoft.Network/virtualNetworks/PJOPS_PROD_VNET",
            "location": "centralindia",
            "name": "PJOPS_PROD_VNET",
            "resource_group_name": "CI_PJOPS_VM_RG",
            "tags": {
              "environment": "DevOps"
            }
          },
          "dependencies": [
            "azurerm_resource_group.CI_PJOPS_VM_RG"
          ]
        }
      ]
    }
  ]
}